Fixes odd breadcrumb on Firefox browser

--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -130,6 +130,7 @@ select {
 .header {
     position: relative;
     height: 133px;
+    margin-bottom: 15px;
 }
 
 h1 {
@@ -465,7 +466,7 @@ h1 a {
 /* main */
 /* ================================================ */
 .main {
-    margin-top: 30px;
+    margin-top: 15px;
     margin-right: -246px;
     width: 100%;
     float: left;
@@ -515,7 +516,7 @@ h1 a {
 /* sidebar */
 /* ================================================ */
 .sidebar {
-    margin-top: 30px;
+    margin-top: 15px;
     width: 226px;
     float: left;
     margin-left: 20px;
@@ -798,7 +799,7 @@ h1 a {
 
 .breadcrumb {
     width: 960px;
-    margin: 0 auto -12px auto;
+    // margin: 0 auto -12px auto;
 
     &:after {
         @include clearfix;
@@ -809,7 +810,7 @@ h1 a {
 
         float: right;
         margin: 0;
-        padding: 9px 0 0 0;
+        padding: 0;
         list-style: none;
 
 
